<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AA Media Proxy</string>
    <string name="status_listener_missing">Notification Access not granted</string>
    <string name="status_listener_ok">Notification Access: OK</string>
    <string name="status_no_session">No media session is being bridged</string>
    <string name="status_active">Bridging media session to Android Auto</string>
    <string name="action_open_settings">Open Notification Access settings</string>
    <string name="action_refresh">Refresh status</string>
    <string name="instructions">This app bridges media apps (YouTube, Podcasts, etc.) that don\'t support Android Auto natively.\n\n1) Grant Notification Access to this app.\n2) Play media in any app.\n3) Open Android Auto.\n4) The \"AA Media Proxy\" media widget will appear.\n\nNote: apps that already support Android Auto (such as Spotify, YouTube Music) are skipped to avoid duplicate widgets.</string>
    <string name="now_playing_header">Now playing</string>
    <string name="no_media_title">No media</string>
    <string name="no_media_subtitle">Play media in any app to see it appear here</string>
    <string name="state_playing">▶  Playing</string>
    <string name="state_paused">⏸  Paused</string>
    <string name="state_idle">⏹  Idle</string>
    <string name="state_buffering">⟳  Buffering…</string>
    <string name="source_package">Source: %1$s</string>
    <string name="status_car_connected">Android Auto: Connected</string>
    <string name="status_car_disconnected">Android Auto: Disconnected</string>
    <string name="action_sync_media">Sync Media</string>
    <string name="sync_media_subtitle">Tap to find and sync media from phone</string>
</resources>
